# geoda2

./: .dockerignore  .editorconfig  .env-sample  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Pipfile  Readme.md  docker-compose.yml  manage.py  mariadb-backup.sh  pyproject.toml  requirements-dev.txt  requirements.txt
accounts/: forms.py  models.py  pipeline.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20190620_1359.py  0003_alter_customuser_options.py
env/: common.env-sample  geoda2.env-sample
extras/: config-sample.toml  e2n_est_curso.py  email2nip.py  geo2geoda.sql  pyproject.toml
geo/: admin.py  api.py  filters.py  forms.py  methods.py  models.py  schema.py  tables.py  urls.py  utils.py  views.py  wsclient.py
geo/migrations/: 0001_initial.py  0002_auto_20190111_2337.py  0002_auto_20190628_1214.py  0003_auto_20190619_1337.py  0003_auto_20190628_1220.py  0004_auto_20190718_1203.py  0005_auto_20190821_0955.py  0006_auto_20190827_1258.py  0007_auto_20190909_0835.py  0008_auto_20191212_1000.py  0009_auto_20200310_1221.py  0010_rightssupport.py  0011_auto_20200330_1000.py  0012_auto_20200330_1307.py  0013_auto_20200402_0925.py  0014_auto_20200403_1110.py  0015_auto_20200415_1227.py  0016_auto_20200415_1455.py  0017_auto_20200904_1111.py  0018_auto_20200918_1501.py  0019_forano_email.py  0020_auto_20210105_1215.py  0021_alter_rightssupport_options.py  0022_auto_20211022_1117.py  (+14 more)
geoda_project/: settings-sample.py  settings.py  urls.py  wsgi.py
templates/: 403.html  500.html  ayuda.html  base.html  home.html
(+39 files in other folders)
