[tool.black]
skip-string-normalization = true
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "email2nip"
version = "0.1.0"
description = "Script para matricular usuarios con NIP en los cursos que impartían con correo"
authors = ["Enrique Matías Sánchez (Quique) <quique@unizar.es>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
cx_Oracle = "^8.0.0"
pymysql = "^0.9.3"
requests = "^2.24.0"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
